# is-max-all-you-need

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: pooling.ipynb
scripts/: download_msmarco.sh  download_teacher_data.sh
src/: data.py  loss.py  model.py  pooling.py  smoke_test.py  test.py  train.py
